# spira_cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/resources/: mod.rs  task.rs
src/resources/incident/: change.rs  create.rs  delete.rs  get.rs  link.rs  list_my.rs  mod.rs  report.rs
src/resources/project_template/: incident_status.rs  mod.rs
src/resources/release/: list.rs  mod.rs
src/resources/requirement/: change.rs  get.rs  link.rs  mod.rs
src/resources/task/: complete.rs  create.rs  delete.rs  get.rs  link.rs  mod.rs  report.rs  time_report.rs  update.rs
src/resources/user/: list.rs  mod.rs
src/spira_client/: mod.rs
src/spira_client/entities/: mod.rs  project.rs  task.rs  user.rs
