[package]
edition = "2021"
name = "spira_cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
dotenv = "0.15"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
serde_with = "1.12"
serde_yaml = "0.8"
spira = {path = "../spira"}
tokio = {version = "1", features = ["full"]}
