[package]
authors = ["Alexandru Olaru <alxolr@gmail.com>"]
description = "A command line tool to integrate with spira api"
edition = "2021"
include = [
  "**/*.rs",
  "Cargo.toml",
]
keywords = ["cli", "productivity", "inflectra", "spira"]
license = "MIT OR Apache-2.0"
name = "spira_cli"
repository = "https://github.com/alxolr/spira_cli"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
dotenv = "0.15"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
serde_with = "2.0"
serde_yaml = "0.9"
spira = {version = "0.0.6"}
structopt = "0"
tokio = {version = "1", features = ["full"]}
